--- a/client/project-three-peapod/src/components/Home.css
+++ b/client/project-three-peapod/src/components/Home.css
@@ -1,8 +1,8 @@
-@media screen 
+/* @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) { 
+  and (min-resolution: 192dpi) {  */
 
 .center-nav {
     display: flex;
@@ -176,7 +176,7 @@ button {
   padding-right: 6px;
 }
 
-}
+/* } */
 @media only screen 
   and (min-device-width: 375px) 
   and (max-device-width: 812px) 
