--- a/client/project-three-peapod/src/components/Product.css
+++ b/client/project-three-peapod/src/components/Product.css
@@ -344,6 +344,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 20px 0px;
   width: 100%;
 }
 
@@ -373,13 +374,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: flex-end;
   width: 100%;
 }
 
 .info-div-sub {
   font-weight: bolder;
   height: 100px;
+  width: 100%;
+  text-align: left;
+  margin: 0;
 }
 
 .price-button-div-item {
